[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MainScenes/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Create" type="Button" parent="."]
margin_left = 424.0
margin_top = 320.0
margin_right = 600.0
margin_bottom = 384.0
text = "Create Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 424.0
margin_top = 232.0
margin_right = 600.0
margin_bottom = 296.0
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
visible = false
margin_left = 824.0
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 112.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="."]
visible = false
margin_left = 16.0
margin_top = 520.0
margin_right = 200.0
margin_bottom = 584.0
text = "Leave Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteamName" type="Label" parent="."]
margin_left = 824.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 48.0
grow_horizontal = 0
text = "Steam Name"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPopup" type="PopupPanel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatePopup" type="PopupPanel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LobbyNameEdit" type="LineEdit" parent="CreatePopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreatePopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 596.0
text = "Lobby Name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
